<resources>
    <string name="app_name">智配库</string>
    <string name="login">登录</string>
    <string name="tv_phone_hint">请输入手机号</string>
    <string name="tv_password_hint">请输入密码</string>
    <string name="tv_register">注册</string>
    <string name="login_title">欢迎回来</string>
    <string name="tv_user_name">企业用户名</string>
    <string name="tv_fingerprint_text">点击进行指纹登录</string>
    <string name="switch_login_mode">切换登录方式</string>
    <string name="switch_user">切换账号</string>
    <string name="tv_code_hint">输入验证码</string>
    <string name="xyb">下一步</string>
    <string name="exit_login">退出登录</string>
    <string name="submit_btn">确定</string>
    <string name="cancel">取消</string>
    <string name="camera_permission_required">本功能需要相机权限！</string>
    <string name="camera_permission_confirmation">需要先打开相机权限</string>
    <string name="camera_permission_not_granted">没有打开相机权限</string>
    <string name="vin_desc">如果识别结果和照片不一致，可手动修改\n请确保照片清晰，若模糊，太暗，遮挡，可能会影响相应VIN分析结果</string>
    <string name="tv_copy">复\n制</string>
    <string name="no_price">暂无报价</string>
</resources>
