<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_register"
            android:textColor="@color/tv_000"
            android:textSize="16sp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="10dp"
            android:layout_alignBottom="@+id/login_title"/>
        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_title"
            android:textColor="@color/tv_999"
            android:textSize="16sp"
            android:paddingTop="16dp"/>
        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel"
            android:layout_alignParentRight="true"
            android:paddingTop="16dp"
            android:paddingRight="30dp"
            android:layout_alignBottom="@+id/login_title"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_back"
        android:layout_below="@+id/rl_title"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_user_name"
        android:textColor="@color/tv_000"
        android:gravity="center"
        android:paddingTop="17dp"
        android:paddingBottom="17dp"
        android:textSize="20dp"
        android:layout_below="@+id/iv_logo"/>
    <ImageView
        android:id="@+id/iv_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/fingerprint"/>
    <TextView
        android:id="@+id/tv_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_fingerprint"
        android:text="@string/tv_fingerprint_text"
        android:textColor="@color/red_login"
        android:gravity="center"
        android:paddingTop="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/switch_login_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_login_mode"
            android:textColor="@color/tv_999"
            android:textSize="13sp"
            android:paddingBottom="17dp"
            android:paddingLeft="25dp"/>

        <TextView
            android:id="@+id/switch_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/switch_user"
            android:layout_alignParentRight="true"
            android:textColor="@color/tv_999"
            android:textSize="13sp"
            android:paddingBottom="17dp"
            android:paddingRight="25dp"/>

    </RelativeLayout>

</RelativeLayout>