<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_marginTop="120dp"
        android:id="@+id/ll_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/iv_logo">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingLeft="36dp"
            android:paddingRight="40dp">
            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_phone"
                android:inputType="phone"
                android:background="@null"
                android:paddingLeft="17dp"
                android:hint="@string/tv_phone_hint"
                android:textColorHint="@color/tv_999"
                android:textSize="16sp"
                android:lines="1"
                android:maxLength="11"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/slide_line"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingLeft="36dp"
            android:paddingRight="40dp"
            android:layout_centerVertical="true"
            >
            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_lock"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_password"
                android:layout_toLeftOf="@id/tv_code"
                android:inputType="number"
                android:background="@null"
                android:paddingLeft="17dp"
                android:textSize="16sp"
                android:textColorHint="@color/tv_999"
                android:hint="@string/tv_code_hint"
                android:lines="1"
                android:maxLength="6"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/login_red_bg2"
                android:textSize="16sp"
                android:textColor="@color/red_login"
                android:text="获取验证码"
                android:layout_marginTop="17dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/slide_line" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/ll_input"
        android:layout_marginTop="60dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="可使用智配库账号直接"
            android:textSize="13sp"
            android:textColor="@color/red_login"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_red_bg"
            android:layout_toRightOf="@+id/tv_title"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textColor="@color/red_login"
            android:textSize="13sp"
            android:layout_marginLeft="10dp"/>


    </RelativeLayout>
    <TextView
        android:id="@+id/tv_xyb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="38dp"
        android:layout_marginLeft="38dp"
        android:padding="10dp"
        android:background="@drawable/shape_login"
        android:layout_below="@+id/rl_login"
        android:text="@string/xyb"
        android:textColor="@color/white"
        android:gravity="center"/>

</RelativeLayout>