<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel"
            android:layout_alignParentRight="true"
            android:paddingTop="@dimen/dm_20"
            android:paddingRight="@dimen/dm_30"
            android:paddingLeft="@dimen/dm_10"
            android:paddingBottom="@dimen/dm_5"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_back"
        android:layout_below="@+id/rl_title"
        android:layout_marginTop="@dimen/dm_40"/>
    <LinearLayout
        android:layout_marginTop="@dimen/dm_60"
        android:id="@+id/ll_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/iv_logo">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm_70"
            android:paddingLeft="36dp"
            android:paddingRight="40dp">
            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_phone"
                android:inputType="phone"
                android:background="@null"
                android:paddingLeft="17dp"
                android:hint="@string/tv_phone_hint"
                android:textColorHint="@color/tv_999"
                android:textSize="16dp"
                android:lines="1"
                android:maxLength="11"
                android:layout_centerVertical="true"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm_0.5"
                android:background="@color/slide_line"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm_70"
            android:paddingLeft="36dp"
            android:paddingRight="40dp">
            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_lock"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_password"
                android:layout_toLeftOf="@id/iv_visual"
                android:inputType="textPassword"
                android:background="@null"
                android:textColorHint="@color/tv_999"
                android:hint="@string/tv_password_hint"
                android:lines="1"
                android:maxLength="18"
                android:layout_centerVertical="true"
                android:paddingLeft="17dp"
                android:textSize="@dimen/dm_16"
                />
            <ImageView
                android:id="@+id/iv_visual"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:src="@drawable/eye_normal"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/dm_10"
                android:paddingRight="@dimen/dm_10"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm_0.5"
                android:layout_alignParentBottom="true"
                android:background="@color/slide_line" />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/dm_38"
        android:layout_marginLeft="@dimen/dm_38"
        android:padding="@dimen/dm_10"
        android:background="@drawable/shape_login"
        android:layout_below="@+id/ll_input"
        android:text="@string/login"
        android:textColor="@color/white"
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_20"
        android:layout_below="@+id/tv_login"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/select_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_btn_normal"
            android:layout_toLeftOf="@+id/text_password"/>
        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="记住密码"
            android:paddingLeft="12dp"
            android:paddingRight="30dp"
            android:textSize="13dp"
            android:layout_toLeftOf="@+id/v_line"
            android:textColor="@color/tv_999"
            android:paddingTop="2dp"/>
        <View
            android:id="@+id/v_line"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="#AAAAAA"
            android:layout_centerInParent="true"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>
        <TextView
            android:id="@+id/text_password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="忘记密码"
            android:textSize="13dp"
            android:layout_toRightOf="@+id/v_line"
            android:paddingLeft="30dp"
            android:paddingTop="2dp"
            android:textColor="@color/tv_999"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/switch_login_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_login_mode"
        android:textColor="@color/tv_999"
        android:textSize="13dp"
        android:paddingBottom="17dp"
        android:paddingLeft="25dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>